Fix overflow in Settings panels

--- a/styles/settings.less
+++ b/styles/settings.less
@@ -49,8 +49,13 @@
     }
   }
 
-  .panels .panels-item {
-    background: @lighter-color;
+  .panels {
+    overflow: auto;
+    margin-right: 1px;
+
+    .panels-item {
+      background: @lighter-color;
+    }
   }
 
   .section,
